RESOLVED FIXED312187
AX: Resolving aria-labelledby and aria-describedby can cause infinite recursion, eventually crashing
https://bugs.webkit.org/show_bug.cgi?id=312187
Summary AX: Resolving aria-labelledby and aria-describedby can cause infinite recursi...
Tyler Wilcock
Reported 2026-04-13 13:40:09 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-13 13:40:16 PDT
Tyler Wilcock
Comment 2 2026-04-13 13:47:43 PDT
EWS
Comment 3 2026-04-13 22:54:18 PDT
Committed 311172@main (a7d0c4715931): <https://commits.webkit.org/311172@main> Reviewed commits have been landed. Closing PR #62662 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.