AX: Resolving aria-labelledby and aria-describedby can cause infinite recursion, eventually crashing https://bugs.webkit.org/show_bug.cgi?id=312187 rdar://174683836

Reviewed by Chris Fleizach.

The accessible name computation had no recursion guard against cycles
involving 3+ elements. The existing ignoredChildNode guard only prevented
direct 2-element cycles. Cycles through intermediary elements bypassed it
because each descriptionForElements call created a fresh TextUnderElementMode
with a different ignoredChildNode.

Added a visited-element set (via static NeverDestroyed<HashSet>) to both
ariaLabeledByAttribute() and ariaDescribedByAttribute(). If we re-enter
either function for an element already being resolved, we return an empty
string, breaking the cycle. This follows the W3C accname spec: "If the
current node is already part of an aria-labelledby traversal, do not
follow its aria-labelledby."

* LayoutTests/accessibility/aria-labelledby-cycle-multi-element-expected.txt: Added.
* LayoutTests/accessibility/aria-labelledby-cycle-multi-element.html: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::ariaDescribedByAttribute const):
(WebCore::AccessibilityNodeObject::ariaLabeledByAttribute const):

Canonical link: https://commits.webkit.org/311172@main